fix(frontend): calendar footer icon press feedback on mobile
Remove the default blue tap highlight and briefly show icons in black while pressed in cart/history calendar footer.

--- a/frontend/src/features/date/presentation/postcardStatusLegend/PostcardStatusLegend.module.scss
+++ b/frontend/src/features/date/presentation/postcardStatusLegend/PostcardStatusLegend.module.scss
@@ -194,12 +194,35 @@
 
 /** Футер календаря (cart/history): иконки enabled/disabled по счётчику, без active при клике. */
 .rootCalendarFooterAlwaysEnabled {
+  .item {
+    -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+
+    &:active {
+      background-color: #fff;
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+    &:focus-visible {
+      outline: none;
+      background-color: #fff;
+    }
+  }
+
   .item.itemIconEnabled .icon {
     color: $color-font-enabled-light;
   }
 
   .item.itemIconDisabled .icon {
     color: $color-font-disabled;
+  }
+
+  .item.itemIconEnabled:active .icon,
+  .item.itemIconDisabled:active .icon {
+    color: $color-font-enabled;
   }
 
   @include iconButton.toolbar-key-hover-fine-pointer {
